--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:push": "prisma db push",
     "prisma:generate": "prisma generate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
