refactor: entity dto naming

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "dependencies": {
+    "@nestjs/mapped-types": "*"
+  },
   "name": "oop-server-admin",
   "version": "1.0.0",
   "description": "",
