--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^7.1.8",
     "@prisma/client": "5.1.1",
     "@types/compression": "^1.7.2",
+    "argon2": "^0.31.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
